--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -102,7 +102,7 @@ tooltip {
 
 #workspaces button.focused {
     background-color: transparent;
-    color: rgba(255, 255, 0, 1);
+    color: rgb(245, 245, 54);
     border: none;
     outline: none;
     box-shadow: none;
@@ -118,34 +118,15 @@ tooltip {
     border-radius: 0px;
 }
 
-/* Workspace named "minimized" */
-#minimized {
-    color: rgb(105, 8, 150);       /* normal state */
-    background-color: transparent;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    padding: 2px 3px;
-    margin-left: 4px;
-    margin-right: 4px;
-    border-radius: 0px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.5s cubic-bezier(0.55, -0.68, 0.48, 1.682);
+/* 5th Workspace named "minimized" */
+#workspaces button:nth-child(5) {
+    color: rgb(190, 88, 4);       /* normal state */
 }
 
-/* Focused state of minimized */
-#minimized.focused {
-    color: rgb(255, 0, 0);       /* focused state */
-    background-color: transparent;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    padding: 2px 3px;
-    margin-left: 4px;
-    margin-right: 4px;
-    border-radius: 0px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(0.55, -0.68, 0.48, 1.682);
+/* 5th Focused state of minimized  */
+#workspaces button:nth-child(5).active,
+#workspaces button:nth-child(5):hover {
+    color: rgb(161, 1, 1);       /* focused state */
 }
 
 #mode {
